# flecs

./: .bazelrc  .editorconfig  .gitignore  .travis.yml  BOUNTY.md  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile.filc  FILC_ISSUES_ANALYSIS.md  FILC_ISSUES_QUICK.md  FILC_RESULTS.md  FILC_RUNTIME_ANALYSIS.md  LICENSE  MODULE.bazel  Manual.md  QUICKSTART_FILC.md  README.md  README_FILC.md  SUMMARY_FILC.md  UnrealFlecs.uplugin  WORKSPACE  WORKSPACE.bzlmod  _typos.toml  abort.c  appveyor.yml  codecov.yaml  compile_minimal_test.sh  compile_runtime_patched.sh  compile_tests_with_filc.sh  compile_with_filc.sh  docker_filc_build.sh  docker_filc_runtime_test.sh  filc_runtime_output.txt  flecs  flecs.c  flecs.h  flecs.s  (+7 more)
docs/tools/c_cpp_doctest/: Cargo.toml  README.md
examples/: BUILD.bazel  CMakeLists.txt  README.md
examples/01_helloworld/src/: main.c
examples/02_simple_system/: project.json
examples/02_simple_system/src/: main.c
examples/03_move_system/src/: main.c
examples/04_simple_module/: project.json
examples/04_simple_module/src/: main.c
examples/06_set_system/: project.json
examples/06_set_system/src/: main.c
examples/07_no_macros/include/: no_macros.h
examples/07_no_macros/src/: main.c
examples/09_hierarchy_api/: project.json
examples/10_inheritance/: project.json
examples/10_inheritance/src/: main.c
examples/10_world_userdata/: project.json
examples/10_world_userdata/include/: bake_config.h  worlduserdata.h
examples/11_inheritance_api/: project.json
examples/11_system_userdata/: project.json
examples/12_entity_id/: project.json
examples/13_override_init/: project.json
examples/13_system_metadata/: project.json
examples/14_add_type/: project.json
examples/14_system_handle_column/: project.json
examples/15_auto_override/: project.json
examples/15_or_expression/: project.json
examples/16_not_expression/: project.json
examples/16_prefab/: project.json
examples/17_optional_component/: project.json
examples/17_prefab_variant/: project.json
examples/18_prefab/: project.json
examples/19_auto_override_nested_prefab/: project.json
examples/19_nested_prefab/: project.json
examples/1_hello_world/: project.json
examples/20_demand_system/: project.json
examples/21_entity_as_component/: project.json
examples/22_demand_system_filter/: project.json
examples/23_dag/: project.json
examples/24_on_demand_system/: project.json
examples/24_random_placement/: project.json
examples/25_snapshot/: project.json
examples/26_snapshot_w_filter/: project.json
examples/2_get_set/: project.json
examples/2_init_system/: project.json
examples/3_add_remove/: project.json
examples/3_families/: project.json
examples/4_init_system/: project.json
examples/4_time_mgmt/: project.json
examples/5_families/: project.json
examples/6_time_mgmt/: project.json
examples/7_disable_system/: project.json
examples/7_periodic_system/: project.json
examples/8_features/: project.json
examples/9_periodic_system/: project.json
examples/c/: CMakeLists.txt  README.md
examples/c/rest/: BUILD  (+1 more)
examples/cpp/: CMakeLists.txt  README.md  flecs.c  flecs.h
examples/plecs/: anonymous_entity.flecs  docs.flecs  expressions.flecs  strings.flecs
examples/script/: anonymous_entity.flecs  docs.flecs  expressions.flecs  hello_world.flecs  prefabs.flecs  reflection.flecs  strings.flecs  with.flecs
src/: api_support.c  array.c  bitset.c  bitset.h  bitset_storage.c  bootstrap.c  builtin.c  bulk.c  chunked.c  column_system.c  commands.c  commands.h  component.c  component_actions.c  component_actions.h  dbg.c  each.c  emit.c  entity.c  entity.h  entity_filter.c  entity_index.c  entity_index.h  entity_name.c  entity_name.h  err.c  family.c  filter.c  flecs_private.h  hash.c  hashmap.c  hierarchy.c  id.c  id_record.c  id_record.h  instantiate.c  instantiate.h  iter.c  iter.h  log.c  (+67 more)
src/addon/: bulk.c  dbg.c  hierarchy.c  module.c  queue.c  reader.c  ringbuf.c  snapshot.c  writer.c
src/addons/: alerts.c  app.c  bulk.c  coredoc.c  dbg.c  deprecated.c  direct_access.c  doc.c  entity_ranges.c  expr.c  flecs_cpp.c  frame.c  http.c  journal.c  journal.h  log.c  meta.c  meta_c.c  metrics.c  module.c  monitor.c  multi_world.c  os_api_impl.c  parser.c  plecs.c  queue.c  reader.c  rest.c  rules.c  rules.old  script.c  snapshot.c  stats.c  timer.c  units.c  writer.c
src/datastructures/: allocator.c  bitset.c  block_allocator.c  entity_index.c  entity_index.h  hash.c  hashmap.c  map.c  name_index.c  name_index.h  qsort.c  qsort.h  sparse.c  stack_allocator.c  stack_allocator.h  strbuf.c  switch_list.c  vec.c  vector.c
src/modules/: pipeline.c  stats.c  system.c  timer.c  timers.c  worker.c
src/query/: api.c  cache.c  cache.h  cache_iter.c  cache_iter.h  cache_order_by.c  change_detection.c  change_detection.h  compiler.c  compiler.h  compiler_term.c  engine.c  parser.c  query.h  trav_cache.c  trav_cache.h  trav_down_cache.c  trav_up_cache.c  trivial_iter.c  trivial_iter.h  types.h  util.c  util.h  validator.c
src/storage/: component_index.c  component_index.h  custom_storage.h  entity_index.c  entity_index.h  id_index.c  id_index.h  non_fragmenting_childof.c  non_fragmenting_childof.h  ordered_children.c  ordered_children.h  sparse_id_record_locks.c  sparse_storage.c  sparse_storage.h  storage.c  table.c  table.h  table_cache.c  table_cache.h  table_column_locks.c  table_column_locks.h  table_data.c  table_data.h  table_graph.c  table_graph.h  type.c  type.h
src/utils/: dbg.c  map.c  reader.c  ringbuf.c  snapshot.c  sparse.c  strbuf.c  vector.c  writer.c
test/: .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  bake_tests.bzl
test/addons/: project.json
test/api/: .gitignore  model.corto  project.json
test/collections/: model.corto  project.json
test/core/: project.json
test/cpp/: project.json
test/cpp_addons/: .gitignore  project.json
test/cpp_api/: project.json
test/cpptest/: project.json
test/meta/: project.json
test/query/: project.json
test/script/: project.json
test/vector/: model.corto
(+4121 files in other folders)
