flecs_src += files([
    'chunked.c',
    'column_system.c',
    'dbg.c',
    'entity.c',
    'err.c',
    'filter.c',
    'map.c',
    'misc.c',
    'os_api.c',
    'parser.c',
    'snapshot.c',
    'stage.c',
    'stats.c',
    'system.c',
    'table.c',
    'type.c',
    'vector.c',
    'worker.c',
    'world.c'
])
